      will no longer be emitted if the package listed in Breaks is also
      listed in Replaces.  Thanks to Modestas Vainius for the report.
      (Closes: #605744)
    + [NT] Clarified that old-versioned-python-dependency can also be
      triggered if dh_python2 is used and the package is missing
      ${python:Breaks}. Thanks to Piotr Ożarowski for the report.
      (Closes: #604167)
  * checks/files{,.desc}:
    + [NT] Fixed false-positive extra-license-file for license.ui files.
      Thanks to Jeremy Sanders for the report.  (Closes: #595941)
    + [NT] Added hurd-udeb to the list of packages allowed to ship
      unusual top-level directories.  Thanks to Samual Thibault for
      the patch.  (Closes: #591331)
    + [NT] Fixed spelling of metapackage in empty-binary-package tag
      description.  (Closes: #591300)
    + [NT] Fixed false-positive extra-license-file for games.  Instead
      of skipping PATH directories Lintian now ignores all executable
      files.  (Closes: #608866)
    + [NT] Added compressed-objects.inv tag to catch compressed
      objects.inv files in python documentation.  Thanks to
      Fladischer Michael for the report and a partial patch.
      (Closes: #608810)
    + [NT] Added check for misplaced python debug files.  Thanks to
      Jakub Wilk for the report.  (Closes: #576014)
    + [NT] Added check for missing dependency on python-central.
      Thanks to Jakub Wilk for the report.  (Closes: #592533)
    + [NT] Added check for misplaced Python modules.  Thanks to
      Jakub Wilk for the report.  (Closes: #576012)
    + [NT] Removed the "!= 0755" part from the out of the tag
      executable-is-not-world-readable, since there are other valid
      world readable file permissions.
    + [NT] Added check for missing dependency on python-support.
      Thanks to Jakub Wilk for the report.  (Closes: #592491)
    + [NT] Added check for packages installing Python eggs and