@@ -438,7 +438,9 @@ if (not defined $info->field('section')) {
 	    if ($parts[-1] ne 'oldlibs') {
 		    foreach my $map (@NAME_SECTION_MAPPINGS) {
 			    if ($pkg =~ $map->[0]) {
-				    tag 'wrong-section-according-to-package-name', "$pkg => $map->[1]"
+				    my $area = '';
+				    $area = "$parts[0]/" if (scalar @parts == 2);
+				    tag 'wrong-section-according-to-package-name', "$pkg => ${area}$map->[1]"
 					unless $parts[-1] eq $map->[1];
 				    last;
 			    }
